starter_file/logs-hyperdrive.txt
[2023-06-27T06:10:41.457935][GENERATOR][INFO]Trying to sample '4' jobs from the hyperparameter space
[2023-06-27T06:10:41.9345406Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_0' 
[2023-06-27T06:10:42.0166334Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_1' 
[2023-06-27T06:10:42.1938224Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_2' 
[2023-06-27T06:10:42.212597][GENERATOR][INFO]Successfully sampled '4' jobs, they will soon be submitted to the execution target.
[2023-06-27T06:10:42.3320435Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_3' 
[2023-06-27T06:10:42.5872419Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_0' 
[2023-06-27T06:10:42.6602562Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_1' 
[2023-06-27T06:10:42.6645896Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_3' 
[2023-06-27T06:10:42.7343470Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_2' 
[2023-06-27T06:15:12.186847][GENERATOR][INFO]Trying to sample '1' jobs from the hyperparameter space
[2023-06-27T06:15:12.528134][GENERATOR][INFO]Successfully sampled '1' jobs, they will soon be submitted to the execution target.
[2023-06-27T06:15:12.5915749Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_4' 
[2023-06-27T06:15:12.9118301Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_4' 
[2023-06-27T06:15:41.368969][CONTROLLER][INFO]Experiment has been marked for cancellation.
[2023-06-27T06:15:41.369027][CONTROLLER][WARNING][HDFlowDebug]The first 4 jobs have failed due to usererror. The system is cancelling the further child runs and failing the experiment. Please resolve the issues before resubmitting the experiment.
[2023-06-27T06:15:42.235682][GENERATOR][INFO]Trying to sample '3' jobs from the hyperparameter space
[2023-06-27T06:15:42.6164829Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_5' 
[2023-06-27T06:15:42.6794358Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_6' 
[2023-06-27T06:15:42.8476801Z][SCHEDULER][INFO]Scheduling job, id='HD_031b493e-e073-4569-bce7-12fed74a5448_7' 
[2023-06-27T06:15:42.773823][GENERATOR][INFO]Successfully sampled '3' jobs, they will soon be submitted to the execution target.
[2023-06-27T06:15:42.9202177Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_5' 
[2023-06-27T06:15:42.9798762Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_6' 
[2023-06-27T06:15:43.1130134Z][SCHEDULER][INFO]Successfully scheduled a job. Id='HD_031b493e-e073-4569-bce7-12fed74a5448_7' 
[2023-06-27T06:16:41.210520][CONTROLLER][WARNING]Marking the experiment for user error because initial child jobs have failed due to user error
[2023-06-27T06:16:41.373712][CONTROLLER][INFO]Experiment has been marked for failure.
[2023-06-27T06:16:41.373773][CONTROLLER][WARNING]Marking the experiment for user error because initial child jobs have failed due to user error
[2023-06-27T06:16:41.536760][CONTROLLER][WARNING]User errors were found in at least one of the child runs.
[2023-06-27T06:16:41.536698][CONTROLLER][INFO]Experiment has been marked for failure.
[2023-06-27T06:16:42.600840][CONTROLLER][INFO]Experiment was 'ExperimentStatus.RUNNING', is 'ExperimentStatus.FAILED'.

Error occurred: Execution failed. User process '/azureml-envs/azureml_950d58957dc3b9d216b75e5c20b0429c/bin/python' exited with status code 1. Please check log file 'user_logs/std_log.txt' for error details. Error: Traceback (most recent call last):
  File "<string>", line 197, in <module>
  File "<string>", line 193, in main
  File "/azureml-envs/azureml_950d58957dc3b9d216b75e5c20b0429c/lib/python3.8/runpy.py", line 264, in run_path
    code, fname = _get_code_from_file(run_name, path_name)
  File "/azureml-envs/azureml_950d58957dc3b9d216b75e5c20b0429c/lib/python3.8/runpy.py", line 239, in _get_code_from_file
    code = compile(f.read(), fname, 'exec')
  File "train.py", line 86
    "    auc_weighted = roc_auc_score(y_test, predicted_probabilities, average="weighted")\n",
                                                                                ^
SyntaxError: invalid syntax

 Marking the experiment as failed because initial child jobs have failed due to user error
